fix(ui) better legibility for disabled buttons – fixes #31

--- a/catppuccin.user.css
+++ b/catppuccin.user.css
@@ -510,7 +510,11 @@
       --color-sponsors-emphasis: $mauve;
       --color-sponsors-muted: rgba(219, 97, 162, 0.4);
       --color-sponsors-subtle: rgba(219, 97, 162, 0.15);
-      --color-primer-fg-disabled: #484f58;
+      if (blueaccent) {
+        --color-primer-fg-disabled: alpha($blue, .5);
+      } else {
+        --color-primer-fg-disabled: alpha($rosewater, .5);
+      }
       --color-primer-canvas-backdrop: rgba(1, 4, 9, 0.8);
       --color-primer-canvas-sticky: rgba(13, 17, 23, 0.95);
       --color-primer-border-active:  $red;
